[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "utilskit"
version = "1.1.4"
description = "다양한 편의성 함수 모음 패키지"
requires-python = ">=3.11"
authors = [
    { name = "kimyh", email = "kim_yh663927@naver.com" },
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
classification = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
]
dataframe = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]
db = [
    "pandas>=2.0.0",
    "pymysql>=1.1.0",
    "SQLAlchemy>=2.0.0",
]
plot = [
    "matplotlib>=3.0.0",
]
repeat = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
]
time = []
utils = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
]
hash = []
llm = [
    "openai>=2.0.0",
]
version = [
    "semver>=3.0.0",
    "GitPython>=3.1.0",
]
file-formats = [
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]
all = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pymysql>=1.1.0",
    "SQLAlchemy>=2.0.0",
    "matplotlib>=3.0.0",
    "semver>=3.0.0",
    "GitPython>=3.1.0",
    "openai>=2.0.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
    "src",
]
exclude = [
    "test/",
    "scripts/",
    "old/",
    "*.tmp",
]

[tool.setuptools.package-data]
